# term3d_rs

./: .gitignore  Cargo.toml  README.md  obj_cube3.mtl  term3d_sample_obj_5.blend
src/: lib.rs  main.rs
